[package]
name = "contree"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"          # Error handling
regex = "1.10"          # For parsing error messages
walkdir = "2.5"         # For directory traversal
ignore = "0.4"          # For respecting .gitignore
clap = { version = "4.5", features = ["derive"] } # CLI argument parsing
atty = "0.2.14"
